--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5818107685:AAE-lC1G77aiNdUNgClz7HmLhQZR-3vx5Lo"                              # Require restart after changing it while bot running
+OWNER_ID = "1814487265"                               # Require restart after changing it while bot running
+TELEGRAM_API = "16621564"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "8b0bf7e5014d7a6862de76cf59e424b4"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
